crates/mel-cli/src/snapshots/mel_inspect__tests__sema_shading_node_single_type.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/shading-node-single-type.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/shading-node-single-type.mel\"),)"
---
source: sema/command-schema/shading-node-single-type.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
