crates/mel-cli/src/snapshots/mel_inspect__tests__sema_typed_return_type_mismatch_via_call.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1440
expression: "render_snapshot(\"sema/proc/typed-return-type-mismatch-via-call.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/typed-return-type-mismatch-via-call.mel\"),)"
---
source: sema/proc/typed-return-type-mismatch-via-call.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[33mWarning:[0m sema: proc "outer" returns String but declares Int
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/typed-return-type-mismatch-via-call.mel:6:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[33mr[0m[33me[0m[33mt[0m[33mu[0m[33mr[0m[33mn[0m[33m [0m[33mh[0m[33me[0m[33ml[0m[33mp[0m[33me[0m[33mr[0m[33m([0m[33m)[0m[33m;[0m
 [38;5;240m  │[0m     [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m             [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m proc "outer" returns String but declares Int
[38;5;246m───╯[0m
