crates/mel-cli/src/snapshots/mel_inspect__tests__sema_var_init_comparison_int_result.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/proc/var-init-comparison-int-result.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/var-init-comparison-int-result.mel\"),)"
---
source: sema/proc/var-init-comparison-int-result.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
